Action spaces and tile spaces aligned correctly score track spaces still unaligned

--- a/fieldofclothofgold.css
+++ b/fieldofclothofgold.css
@@ -49,15 +49,16 @@
 /********* You can start writing your CSS below this line: **********/
 
 #board {
-    width: 730px;
-    height: 450px;
+    width: 750px;
+    height: 557px;
     background-image: url('img/board.jpg');
+    background-size: contain;
     position: relative;
 }
 
-.oval {
+.circle {
     width: 36px;
-    height: 26px;
+    height: 36px;
     border-radius: 50%;
     position: absolute;
     border-style: solid;
@@ -65,8 +66,8 @@
 }
 
 .square {
-    width: 36px;
-    height: 36px;
+    width: 50px;
+    height: 50px;
     position: absolute;
     border-style: solid;
     border-color: #ff0000;
